@@ -88,6 +88,9 @@ form. (pat via mahadev)
    ZOOKEEPER-246. review error code definition in both source and docs. (pat
 via mahadev)
 
+   ZOOKEEPER-256. support use of JMX to manage log4j configuration at runtime.
+(pat via mahadev)
+
 Release 3.0.0 - 2008-10-21
 
 Non-backward compatible changes:
